# virtual-hardware-board

./: .codacy.yml  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gui.txt  requirements.txt  run_quality_checks.py
.github/workflows/: ci.yml  codacy_quality.yml  python_tests_ci.yml  quality-and-tests.yml
docs/: usb_cmsis_dap.md
examples/: run_gdb_server.py  run_gui.py  run_gui_with_gdb.py  run_led_blink.py
firmware/: Makefile  README.md  startup.c
firmware/led_blink/: Makefile  README.md  linker.ld  startup.c  tm4c.h
simulator/: __init__.py
simulator/core/: __init__.py  address_space.py  board.py  builders.py  clock.py  cpu.py  exceptions.py  gpio_enums.py  interrupt_controller.py  memmap.py  peripheral.py  register.py  simulation_engine.py  sysctl.py  unicorn_cpu.py
simulator/debug/: __init__.py  __main__.py  gdb_server.py  server.py  session.py
simulator/interfaces/: __init__.py  board.py  clock.py  cpu.py  gpio.py  gpio_enums.py  interrupt_controller.py  memory.py  memory_access.py  memory_map.py  peripheral.py
simulator/stm32/: __init__.py  board.py  config.yaml  consts.py  cpu.py  gpio.py  memory_access.py
simulator/stm32c031/: __init__.py  board.py  config.yaml
simulator/tm4c/: __init__.py  board.py  config.yaml  consts.py  gpio.py  memory_access.py
simulator/tm4c123/: __init__.py  board.py  config.yaml  configs.py  cpu.py  gpio.py  memory.py  peripheral.py
simulator_gui/: __init__.py  __main__.py  app.py  backend.py  config.py  controller.py  layout.py  registry.py
tests/: conftest.py
(+58 files in other folders)
