[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-hardware-board"
version = "0.1.0"
description = "Cortex-M virtual hardware board simulator with board-specific peripherals"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
    "unicorn",
]

[project.optional-dependencies]
gui = [
    "PySide6",
    "psutil",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=7.0",
    "black>=24.10.0,<25",
    "flake8>=6.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pylint>=2.0",
    "radon>=6.0",
    "vulture>=2.0",
]

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py312', 'py313']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.pylint.MASTER]
disable = [
    "missing-docstring",
    "invalid-name",
    "fixme",
    "too-many-arguments",
    "too-few-public-methods",
    "no-name-in-module",
    "unused-argument",
    "duplicate-code",
    "mixed-line-endings",
    "unnecessary-ellipsis",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "too-many-locals",
    "protected-access",
]

[tool.pylint.DESIGN]
max-args = 7
